replace List<Cards> with firstClassCollection